--- a/arch/arm/boot/dts/mt6323.dtsi
+++ b/arch/arm/boot/dts/mt6323.dtsi
@@ -21,9 +21,7 @@
 			status = "disabled";
 		};
 
-		mt6323regulator: mt6323regulator{
-			compatible = "mediatek,mt6323-regulator";
-
+		mt6323regulator {
 			mt6323_vproc_reg: buck_vproc{
 				regulator-name = "vproc";
 				regulator-min-microvolt = < 700000>;
